RS-105: Address review — export gating, load failures and pool details
Review found that the export gate inherited the cast's definition and broke on queues the staffer cannot touch: `getStoredCast` returns only reassignable matches, so a played queue answers with an empty cast, while the assignment sheet renders the whole queue. `canExport` required at least one assignment in that empty set, which blocked an export master allowed (via generate + save on an empty list). The gate is now exactly "the screen agrees with the database" (`persisted()`), which is the property that matters for a sheet rendered from stored data; a queue with no matches at all is the one case it lets through, and the backend answers that with a clear message. `persisted` is also cleared while a request is in flight, so Export can no longer fire at the queue the stepper just moved to while the previous cast is still on screen.

Keeping the cast as the staffable subset is deliberate - it is the set a regenerate replaces, and the set Save cast may write - so the divergence from the sheet is now stated in `getStoredCast`, in `canExport` and in CLAUDE.md, and pinned by a spec for a played queue.

Also from the review:
- the race guard reached only the success path, so a failure from an abandoned queue cleared the newer request's loading state;
- a failed load left the screen inviting the user to generate (and then overwrite the cast it had just failed to read) - there is now a `loadFailed` state with a retry;
- locked referees are read from the request instead of from whatever `applyLocks` happens to leave assigned;
- the `getId() == null` guards existed only because `Set.of().contains(null)` throws - the empty case is `Collections.emptySet()` now;
- notes on the second managed copy the queue queries create after the detach, and `#description` in the `MatchSpec` method name.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XCuJhUfbUkgy7D7ocYzd